fix: removed z-index from header scroll

--- a/css/index.css
+++ b/css/index.css
@@ -64,7 +64,6 @@
   position: fixed;
   width: 100%;
   background-color: #c7c9ca;
-  z-index: 5;
 }
 .header .scroll .scroll-container {
   width: 100%;
