--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -73,7 +73,6 @@
         position: fixed;
         width: 100%;
         background-color: #c7c9ca;
-        z-index: 5;
 
         .scroll-container {
 
